<resources>
    <string name="app_name">24/7</string>
    <string name="major_preferences">Important preferences</string>
    <string name="activty_where">Team member locations</string>
    <string name="activty_teammembers">Team members</string>
    <string name="activty_callaround">Call around</string>
    <string name="activty_checkin">Check-in</string>
    <string name="activty_chooselocations">Choose locations</string>
    <string name="menu_where">Where is everybody?</string>
    <string name="menu_teammembers">Team members</string>
    <string name="menu_callaround">Call around</string>
    <string name="menu_checkin">Oustanding check-ins</string>
    <string name="menu_chooselocations">Permitted locations</string>
    <string name="noLocations">No locations yet</string>
    <string name="newLocation">New location…</string>
    <string name="permitted">Permitted Location</string>
    <string name="location_name_hint">Location name</string>
    <string name="confirm">Confirm</string>
    <string name="location_edit">Edit Location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="call_number">Call number</string>
    <string name="red_alert">Red Alert!</string>
    <string name="noCheckins">There are no outstanding check-ins.</string>
    <string name="callaround_enabled">Call around enabled</string>
    <string name="editTeammember">Edit Teammember</string>
    <string name="checkedout">Out:</string>
    <string name="checkedin">In:</string>
    <string name="no_teammembers">No teammembers</string>
    <string name="arrivedat" formatted="false">Arrived: %s (%s)</string>
    <string name="enroute" formatted="false">En route: %s (%s)</string>
    <string name="goneto" formatted="false">To: %s (%s)</string>
    <string name="returning">Check-in by: %s</string>
    <string name="due">Due: %s</string>
    <string name="with">With: %s</string>
    <string name="resolve_checkin">Resolve check-in</string>
    <string name="unresolve_checkin">Unresolve check-in</string>
    <string name="resolve_trip">Resolve trip</string>
    <string name="unresolve_trip">Unresolve trip</string>
    <string name="resolve_callaround">Resolve call around</string>
    <string name="unresolve_callaround">Undo call around</string>
    <string name="settings">Settings</string>
    <string name="disable_callaround">Disable call around</string>
    <string name="enable_callaround">Enable call around</string>
    <string name="unknown_number">Unknown number</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="callaround_summary" formatted="false">%s called in, %s remaining</string>
    <string name="callaround_summary_allin">All in</string>
    <string name="callaround_summary_none">No call arounds are set</string>
    <string name="checkin_summary_none">No one out</string>
    <string name="checkin_summary_singular">1 person out</string>
    <string name="checkin_summary" formatted="false">%s people out</string>
    <string name="noCallarounds">There are currently no call arounds.</string>
    <string name="callaround_title">Call arounds: %s</string>
    <string name="home_checkins">Check-ins</string>
    <string name="home_callaround">Call arounds</string>
    <string name="home_locations">Permitted locations</string>
    <string name="home_teammembers">Team members</string>
    <string name="home_houses">Houses/Groups</string>
    <string name="home_settings">Settings</string>
    <string name="no_callaround_report">No report available</string>
    <string name="manual_add_callarounds">Add today\'s call arounds</string>
    <string name="house_settings">House settings</string>
    <string name="select_groups_instructions">Select which of the contact groups should be doing call around.</string>
    <string name="select_groups_none">There are currently no contact groups. Add these in the phone\'s contacts settings.</string>
    <string name="callaround_groups">Call around groups</string>
    <string name="newHouse">Add a new house</string>
    <string name="noHouses">There are no houses yet.</string>
    <string name="location_instructions">A checkmark means that the location is permitted.</string>
    <string name="house_instructions">A checkmark means that call around is expected from the house.</string>
    <string name="set_house">Set house</string>
    <string name="not_yet_received">Not yet received</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_phone">Edit phone</string>
    <string name="edit_email">Edit email</string>
    <string name="delete_teammember">Remove teammember</string>
    <string name="email_database">Send database</string>
    <string name="email_database_summary">Send a copy of the database to someone</string>
    <string name="upload_database">Copy database from SD</string>
    <string name="upload_database_summary">Replaces the 24/7 database with one on the SD card (in the bluetooth folder).</string>
    <string name="reset_database">Reset database</string>
    <string name="reset_database_summary">Clear all data from the database, permanently.</string>
    <string name="callaround">Call around</string>
    <string name="database">Database operations</string>
    <string name="upload_database_instructions">If you don\'t know exactly what you\'re doing here, hit Cancel now. Otherwise, hit OK to upload a new database. The database should be called "thedatabase" and it should be on the SD card, in the "bluetooth" folder.</string>
    <string name="reset_database_first_warning">If you don\'t know exactly what you\'re doing here, hit Cancel now. You will lose ALL of the data. You will never get it back.</string>
    <string name="reset_database_second_warning">This is just to confirm that you want to delete EVERYTHING, irrecoverably. This is the last warning! Click Ok to delete everything and start from scratch.</string>
    <string name="noCallaroundsForDay">There are no callarounds for this day.</string>
    <string name="clear_data">Clear old data</string>
    <string name="clear_data_summary">Clear old data</string>
    <string name="clear_oneweek">Call arounds &amp; check-ins</string>
    <string name="clear_oneweek_summary">Clear call arounds &amp; check-ins due before one week ago</string>
    <string name="clear_log">The event log</string>
    <string name="clear_log_summary">Clear logged events from before one week ago</string>
    <string name="previous_days">Previous days</string>
    <string name="callaround_alarm_time">Alarm time</string>
    <string name="callaround_alarm_time_summary">What time the call around alarm should sound, if no one has checked in</string>
    <string name="callaround_due">Due time</string>
    <string name="callaround_due_summary">What time daily call around is due</string>
    <string name="callaround_earliest">Earliest time</string>
    <string name="callaround_earliest_summary">The earliest time a team member can do call around</string>
    <string name="callaround_delayed_time">Delayed time</string>
    <string name="callaround_delayed_time_summary">The latest time a team member can do call around, if s/he requests a delay</string>
    <string name="callaround_add">Add time</string>
    <string name="callaround_add_summary">The time each day that the day\'s call arounds should be added</string>
    <string name="callaround_settings">Call around settings</string>
    <string name="blocked_numbers">Number blocking</string>
    <string name="block_number">Block number</string>
    <string name="block_number_summary">Blocking number will make 24/7 ignore everything from that number.</string>
    <string name="block_number_warning">If you block this person\'s number, s/he will be cut off from the system entirely. (This can be undone later.) Are you sure you want to do this?</string>
    <string name="unblock_number">Unblock number</string>
    <string name="number_blocking">Number blocking</string>
    <string name="customization">Preferences</string>
    <string name="thisis_enabled">Permit “this is”</string>
    <string name="thisis_enabled_summary">Allow new users to add themselves to the system</string>
    <string name="callaround_reminder_enabled">Send all around reminder</string>
    <string name="no_blocked_numbers">There are currently no blocked numbers</string>
    <string name="no_house_contacts">There are no numbers associated with this house. Either add people or disable this house\'s call around.</string>
    <string name="call_house">Call someone</string>
    <string name="call_guard">Call night guard</string>
    <string name="missed_call_delay">Missed call delay (ms)</string>
    <string name="missed_call_delay_summary">The delay between when the phone first starts ringing and when 24/7 checks for the ringing to have stopped.</string>
    <string name="allow_request_reports">Allow report requests</string>
    <string name="disallow_request_reports">Disallow report requests</string>
    <string name="none">None</string>
    <string name="noLogEvents">No events logged at this time</string>
    <string name="log">Log</string>
    <string name="callaround_outstanding">Outstanding</string>
    <string name="callaround_resolved">Call around resolved</string>
    <string name="checkin_reminders">Check-in reminders</string>
    <string name="delete_callaround">Delete</string>
    <string name="second_time">Second time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="first_time">First time</string>
    <string name="second_time_enabled">Second time enabled</string>
    <string name="add_travel_callaround">Add travel call-ins</string>
    <string name="house_group">House/Group</string>
    <string name="callaround_window">Window (minutes)</string>
    <string name="show_future">Show future</string>
    <string name="show_future_summary">Show call arounds that are scheduled after today</string>
    <string name="callaround_preferences">Call around</string>
    <string name="delete_all_unsent_warning">Are you sure you want to delete all records of unsent and undelivered messages?</string>
    <string name="unsent">Not sent</string>
    <string name="unconfirmed">Not confirmed</string>
    <string name="msgerror">Unsent messages</string>
    <string name="noerrors">No errors at this time</string>
    <string name="message_error_one">1 message error</string>
    <string name="message_errors">%s message errors</string>
    <string name="unsent_undelivered_header">Unsent/Undelivered:</string>
    <string name="disable_247">Disable 24/7</string>
    <string name="disable_247_summary">If this box is checked, 24/7 will ignore any incoming messages or calls (except guard checks).</string>
    <string name="guard_preferences">Guard check-ins</string>
    <string name="fewest_calls">Fewest calls</string>
    <string name="fewest_calls_summary">Every guard will get at least this many calls.</string>
    <string name="random_calls">Random extra calls</string>
    <string name="random_calls_summary">Randomly add up to n calls. The probability of all n calls being made is 0.5^n.</string>
    <string name="guard_checkin_start">Beginning time</string>
    <string name="guard_checkin_end">End time</string>
    <string name="guard_response_window">Response window</string>
    <string name="guard_response_window_summary">Time in minutes that the guard has to respond</string>
    <string name="remove_teammember_from_house">Remove from %s</string>
    <string name="teammember_house_callaround_enabled">%s call around enabled</string>
    <string name="teammember_house_callaround_resolved">%s call around resolved</string>
</resources>